syntax = "proto3";

package com.ixaris.commons.microservices.lib.example;

import "scsl.proto";

option optimize_for = SPEED;
option (scsl.location) = "example.scsl";

message ExampleContext {
    string security = 1;
}

message ExampleRequest {

    enum FailureType {
        NONE = 0;
        RUNTIME = 1;
        CONFLICT = 2;
        NOT_IMPLEMENTED = 3;
        UNSUPPORTED_OP = 4;
        TIMEOUT = 5;
    }

    int32 id = 1;
    int32 sleep_duration = 2;
    FailureType failure_type = 3;
}

message ExampleResponse {
    int32 id = 1;
}

message ExampleEvent {
    int32 id = 1;
}

message ExampleError {
    enum ExampleErrorCode {
        NO_ERROR = 0;
        EXAMPLE_ERROR = 1;
    }

    ExampleErrorCode error_code = 1;
}




